# cloud-netconfig

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
distribution/: README.md  cloud-network.yaml
distribution/config/examples/: aws.yaml  azure.yaml  gcp.yaml  minimal.yaml  multi-interface.yaml  production.yaml
distribution/lib/systemd/system/: cloud-netconfigd.service
distribution/scripts/: install.sh  uninstall.sh
distribution/usr/share/bash-completion/completions/: cnctl
distribution/usr/share/fish/vendor_completions.d/: cnctl.fish
distribution/usr/share/zsh/site-functions/: _cnctl
src/: lib.rs
src/cloud/: mod.rs
src/conf/: mod.rs
src/network/: address.rs  link.rs  mod.rs  route.rs  routing_policy_rule.rs
src/parser/: mod.rs
src/provider/: azure.rs  ec2.rs  gcp.rs  mod.rs  network.rs  watch.rs
src/system/: mod.rs
src/web/: mod.rs
