[package]
name = "cloud-netconfig"
version = "0.2.1"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Configures network in cloud environment from metadata"

[[bin]]
name = "cloud-netconfigd"
path = "src/bin/cloud-netconfigd.rs"

[[bin]]
name = "cnctl"
path = "src/bin/cnctl.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# HTTP client for metadata
reqwest = { version = "0.11", features = ["json"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Netlink for network configuration
rtnetlink = "0.14"
netlink-packet-route = "0.18"
netlink-sys = "0.8"
futures = "0.3"

# System operations
nix = { version = "0.27", features = ["user", "process", "signal"] }
caps = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"

# Async traits
async-trait = "0.1"

# Systemd integration
libsystemd = "0.7"

[dev-dependencies]
mockito = "1.2"
